Update lists at 20250430-1201

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -529,7 +529,6 @@ allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
-allow 185.38.175.133;
 allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
@@ -700,6 +699,7 @@ allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.62.158;
+allow 199.195.248.168;
 allow 199.195.249.214;
 allow 199.195.251.119;
 allow 199.195.251.202;
@@ -926,6 +926,7 @@ allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.113.8;
+allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.118.31;
@@ -1244,8 +1245,8 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:4d80::1;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
+allow 2a00:fbe4:1ab:ffff::133;
 allow 2a01:270:9847::1;
-allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1350,6 +1351,7 @@ allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
+allow 2a0b:7140:6:1:5054:ff:fe01:747b;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
@@ -1550,7 +1552,6 @@ allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:22d0::1;
 allow 2a0d:8140:1fff:395e::1;
-allow 2a0d:8140:1fff:62f9::1;
 allow 2a0d:8140:1fff:fe40::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::132;
@@ -1728,7 +1729,6 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1739,6 +1739,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1752,7 +1753,6 @@ allow 45.134.225.36;
 allow 45.137.99.10;
 allow 45.137.99.144;
 allow 45.137.99.216;
-allow 45.137.99.98;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.164;
@@ -1788,8 +1788,10 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
+allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.148.10.169;
+allow 45.155.249.241;
 allow 45.157.11.6;
 allow 45.159.250.144;
 allow 45.61.185.172;
