--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -116,7 +116,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 114.41.22.98;
+allow 1.170.235.168;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -275,7 +275,6 @@ allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.120.16.171;
-allow 185.120.16.176;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -294,7 +293,6 @@ allow 185.132.53.6;
 allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
-allow 185.153.197.227;
 allow 185.153.198.104;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -543,7 +541,6 @@ allow 185.40.4.38;
 allow 185.40.4.44;
 allow 185.40.4.64;
 allow 185.40.4.92;
-allow 185.42.12.136;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
@@ -1304,6 +1301,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
@@ -1613,54 +1611,6 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
-allow 2a10:1fc0:10::19eb:717b;
-allow 2a10:1fc0:10::28fc:90d4;
-allow 2a10:1fc0:10::2a17:5b54;
-allow 2a10:1fc0:10::2cf4:6ba2;
-allow 2a10:1fc0:10::2d91:1a2d;
-allow 2a10:1fc0:10::3903:457;
-allow 2a10:1fc0:10::3919:de17;
-allow 2a10:1fc0:10::3a1:5e9f;
-allow 2a10:1fc0:10::3dc5:e694;
-allow 2a10:1fc0:10::3eb3:d1d0;
-allow 2a10:1fc0:10::3ec1:2b1e;
-allow 2a10:1fc0:10::40d8:83c;
-allow 2a10:1fc0:10::42d2:f78b;
-allow 2a10:1fc0:10::5138:4dfa;
-allow 2a10:1fc0:10::5719:261d;
-allow 2a10:1fc0:10::61d9:7617;
-allow 2a10:1fc0:10::61e2:c84d;
-allow 2a10:1fc0:10::627f:3c31;
-allow 2a10:1fc0:10::694a:c359;
-allow 2a10:1fc0:10::6b4c:30fc;
-allow 2a10:1fc0:10::6c2e:469a;
-allow 2a10:1fc0:10::6d92:d6ab;
-allow 2a10:1fc0:10::6fde:4b8d;
-allow 2a10:1fc0:10::792f:38b4;
-allow 2a10:1fc0:10::895d:abf9;
-allow 2a10:1fc0:10::8a03:d023;
-allow 2a10:1fc0:10::8b78:d42e;
-allow 2a10:1fc0:10::8d4d:eca2;
-allow 2a10:1fc0:10::9a73:d4f2;
-allow 2a10:1fc0:10::9d80:c9f7;
-allow 2a10:1fc0:10::9e08:e765;
-allow 2a10:1fc0:10::a3a5:49da;
-allow 2a10:1fc0:10::a458:8b37;
-allow 2a10:1fc0:10::a63c:724c;
-allow 2a10:1fc0:10::b571:1205;
-allow 2a10:1fc0:10::bf3f:d195;
-allow 2a10:1fc0:10::c129:61a1;
-allow 2a10:1fc0:10::c385:c7fa;
-allow 2a10:1fc0:10::c7c7:2f84;
-allow 2a10:1fc0:10::d5a6:a292;
-allow 2a10:1fc0:10::d5d0:db30;
-allow 2a10:1fc0:10::d6b7:b3e9;
-allow 2a10:1fc0:10::dbe0:6173;
-allow 2a10:1fc0:10::dbe9:7852;
-allow 2a10:1fc0:10::e4c8:9020;
-allow 2a10:1fc0:10::ea87:5496;
-allow 2a10:1fc0:10::fa6c:cac5;
-allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:1467::;
@@ -1865,7 +1815,6 @@ allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
-allow 46.249.49.183;
 allow 46.30.188.218;
 allow 47.254.142.180;
 allow 47.89.193.230;
@@ -1879,6 +1828,7 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
+allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1965,30 +1915,6 @@ allow 84.19.182.20;
 allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
-allow 85.239.55.11;
-allow 85.239.55.110;
-allow 85.239.55.112;
-allow 85.239.55.114;
-allow 85.239.55.123;
-allow 85.239.55.132;
-allow 85.239.55.168;
-allow 85.239.55.173;
-allow 85.239.55.174;
-allow 85.239.55.184;
-allow 85.239.55.189;
-allow 85.239.55.192;
-allow 85.239.55.201;
-allow 85.239.55.228;
-allow 85.239.55.230;
-allow 85.239.55.239;
-allow 85.239.55.24;
-allow 85.239.55.249;
-allow 85.239.55.25;
-allow 85.239.55.250;
-allow 85.239.55.31;
-allow 85.239.55.37;
-allow 85.239.55.51;
-allow 85.239.55.80;
 allow 85.93.218.204;
 allow 86.54.28.49;
 allow 87.118.110.27;
@@ -2028,30 +1954,6 @@ allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.227.114.153;
-allow 91.227.77.107;
-allow 91.227.77.108;
-allow 91.227.77.119;
-allow 91.227.77.125;
-allow 91.227.77.139;
-allow 91.227.77.158;
-allow 91.227.77.160;
-allow 91.227.77.181;
-allow 91.227.77.193;
-allow 91.227.77.200;
-allow 91.227.77.208;
-allow 91.227.77.209;
-allow 91.227.77.226;
-allow 91.227.77.229;
-allow 91.227.77.237;
-allow 91.227.77.25;
-allow 91.227.77.31;
-allow 91.227.77.36;
-allow 91.227.77.44;
-allow 91.227.77.48;
-allow 91.227.77.51;
-allow 91.227.77.54;
-allow 91.227.77.62;
-allow 91.227.77.97;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
@@ -2085,5 +1987,4 @@ allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.244.28;
 allow 95.216.107.148;
-allow 96.66.15.152;
 allow 98.128.173.33;
