--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -520,6 +520,7 @@ deny 185.246.189.99;
 deny 185.246.84.179;
 deny 185.247.184.105;
 deny 185.247.184.33;
+deny 185.247.226.175;
 deny 185.252.232.218;
 deny 185.254.196.141;
 deny 185.34.33.2;
@@ -1326,6 +1327,7 @@ deny 2a06:1700:0:16::1;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:47::166;
 deny 2a06:1700:0:50::11;
+deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
@@ -1544,6 +1546,7 @@ deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:22d0::1;
 deny 2a0d:8140:1fff:395e::1;
+deny 2a0d:8140:1fff:62f9::1;
 deny 2a0d:8140:1fff:fe40::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::132;
@@ -1671,6 +1674,7 @@ deny 2a12:a800:9:1:193:26:115:61;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
+deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1681,7 +1685,6 @@ deny 37.228.129.5;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
-deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1695,6 +1698,7 @@ deny 45.134.225.36;
 deny 45.137.99.10;
 deny 45.137.99.144;
 deny 45.137.99.216;
+deny 45.137.99.98;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.164;
@@ -1847,6 +1851,7 @@ deny 5.2.67.226;
 deny 5.2.72.110;
 deny 5.2.79.190;
 deny 5.34.182.203;
+deny 54.191.77.33;
 deny 54.36.101.21;
 deny 54.36.108.162;
 deny 54.36.209.253;
