--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -113,7 +113,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.235.168;
+allow 114.41.1.112;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -156,11 +156,9 @@ allow 152.32.206.127;
 allow 152.32.218.34;
 allow 152.53.133.14;
 allow 152.53.53.243;
-allow 153.165.137.56;
 allow 154.16.116.61;
 allow 154.26.159.157;
 allow 154.41.95.1;
-allow 156.229.226.6;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 161.129.68.162;
@@ -539,11 +537,11 @@ allow 185.40.4.38;
 allow 185.40.4.44;
 allow 185.40.4.64;
 allow 185.40.4.92;
-allow 185.42.12.136;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.82.219.109;
+allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -633,6 +631,7 @@ allow 193.189.100.203;
 allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
+allow 193.218.118.112;
 allow 193.218.118.156;
 allow 193.218.118.160;
 allow 193.218.118.173;
@@ -1281,6 +1280,7 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
+allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1611,6 +1611,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
+allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
@@ -1678,7 +1679,6 @@ allow 2a12:a800:9:1:193:26:115:61;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1689,6 +1689,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
