Update lists at 20250502-1801

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -716,7 +716,6 @@ allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
-allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:1fc0:10::19eb:717b;
 allow 2a10:1fc0:10::28fc:90d4;
 allow 2a10:1fc0:10::2a17:5b54;
@@ -765,6 +764,7 @@ allow 2a10:1fc0:10::e4c8:9020;
 allow 2a10:1fc0:10::ea87:5496;
 allow 2a10:1fc0:10::fa6c:cac5;
 allow 2a10:1fc0:10::fdb0:ba7f;
+allow 2a10:1fc0:c:0:216:3cff:fe59:a64a;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
