--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,7 +110,7 @@ allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.145.195.180;
 allow 114.35.245.150;
-allow 1.170.211.251;
+allow 1.170.222.187;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -627,7 +627,6 @@ allow 193.218.118.112;
 allow 193.218.118.156;
 allow 193.218.118.160;
 allow 193.218.118.173;
-allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
@@ -1604,7 +1603,6 @@ allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
-allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:1fc0:10::19eb:717b;
 allow 2a10:1fc0:10::28fc:90d4;
 allow 2a10:1fc0:10::2a17:5b54;
@@ -1653,6 +1651,7 @@ allow 2a10:1fc0:10::e4c8:9020;
 allow 2a10:1fc0:10::ea87:5496;
 allow 2a10:1fc0:10::fa6c:cac5;
 allow 2a10:1fc0:10::fdb0:ba7f;
+allow 2a10:1fc0:c:0:216:3cff:fe59:a64a;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1717,7 +1716,6 @@ allow 2a12:a800:9:1:193:26:115:61;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
-allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1728,6 +1726,7 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1867,7 +1866,6 @@ allow 51.222.142.67;
 allow 51.38.225.46;
 allow 51.81.222.62;
 allow 5.181.80.107;
-allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
@@ -1995,7 +1993,6 @@ allow 88.80.26.4;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
-allow 89.147.110.82;
 allow 89.147.111.87;
 allow 89.222.102.137;
 allow 89.234.157.254;
