--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -110,7 +110,7 @@ deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.145.195.180;
 deny 114.35.245.150;
-deny 1.170.211.251;
+deny 1.170.222.187;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -627,7 +627,6 @@ deny 193.218.118.112;
 deny 193.218.118.156;
 deny 193.218.118.160;
 deny 193.218.118.173;
-deny 193.218.118.178;
 deny 193.218.118.182;
 deny 193.218.118.188;
 deny 193.218.118.89;
@@ -1604,7 +1603,6 @@ deny 2a0f:e586:f:f:23ae:4067:bed4:a129;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
-deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a10:1fc0:10::19eb:717b;
 deny 2a10:1fc0:10::28fc:90d4;
 deny 2a10:1fc0:10::2a17:5b54;
@@ -1653,6 +1651,7 @@ deny 2a10:1fc0:10::e4c8:9020;
 deny 2a10:1fc0:10::ea87:5496;
 deny 2a10:1fc0:10::fa6c:cac5;
 deny 2a10:1fc0:10::fdb0:ba7f;
+deny 2a10:1fc0:c:0:216:3cff:fe59:a64a;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1717,7 +1716,6 @@ deny 2a12:a800:9:1:193:26:115:61;
 deny 31.129.22.65;
 deny 31.133.0.210;
 deny 31.184.236.104;
-deny 31.220.75.237;
 deny 31.44.238.25;
 deny 35.0.127.52;
 deny 37.120.239.59;
@@ -1728,6 +1726,7 @@ deny 37.228.129.5;
 deny 37.48.120.196;
 deny 37.48.70.156;
 deny 37.77.56.238;
+deny 38.242.254.131;
 deny 38.97.116.242;
 deny 38.97.116.243;
 deny 38.97.116.244;
@@ -1867,7 +1866,6 @@ deny 51.222.142.67;
 deny 51.38.225.46;
 deny 51.81.222.62;
 deny 5.181.80.107;
-deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
@@ -1995,7 +1993,6 @@ deny 88.80.26.4;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
-deny 89.147.110.82;
 deny 89.147.111.87;
 deny 89.222.102.137;
 deny 89.234.157.254;
