--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -110,7 +110,7 @@ set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
 set_real_ip_from 114.145.195.180;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 1.170.211.251;
+set_real_ip_from 1.170.222.187;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -627,7 +627,6 @@ set_real_ip_from 193.218.118.112;
 set_real_ip_from 193.218.118.156;
 set_real_ip_from 193.218.118.160;
 set_real_ip_from 193.218.118.173;
-set_real_ip_from 193.218.118.178;
 set_real_ip_from 193.218.118.182;
 set_real_ip_from 193.218.118.188;
 set_real_ip_from 193.218.118.89;
@@ -1604,7 +1603,6 @@ set_real_ip_from 2a0f:e586:f:f:23ae:4067:bed4:a129;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
-set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:1fc0:10::19eb:717b;
 set_real_ip_from 2a10:1fc0:10::28fc:90d4;
 set_real_ip_from 2a10:1fc0:10::2a17:5b54;
@@ -1653,6 +1651,7 @@ set_real_ip_from 2a10:1fc0:10::e4c8:9020;
 set_real_ip_from 2a10:1fc0:10::ea87:5496;
 set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
 set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
+set_real_ip_from 2a10:1fc0:c:0:216:3cff:fe59:a64a;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1717,7 +1716,6 @@ set_real_ip_from 2a12:a800:9:1:193:26:115:61;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
 set_real_ip_from 31.184.236.104;
-set_real_ip_from 31.220.75.237;
 set_real_ip_from 31.44.238.25;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.239.59;
@@ -1728,6 +1726,7 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 37.77.56.238;
+set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.242;
 set_real_ip_from 38.97.116.243;
 set_real_ip_from 38.97.116.244;
@@ -1867,7 +1866,6 @@ set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.38.225.46;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 5.181.80.107;
-set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
@@ -1995,7 +1993,6 @@ set_real_ip_from 88.80.26.4;
 set_real_ip_from 89.147.108.90;
 set_real_ip_from 89.147.110.118;
 set_real_ip_from 89.147.110.154;
-set_real_ip_from 89.147.110.82;
 set_real_ip_from 89.147.111.87;
 set_real_ip_from 89.222.102.137;
 set_real_ip_from 89.234.157.254;
