--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -716,7 +716,6 @@ set_real_ip_from 2a0f:e586:f:f:23ae:4067:bed4:a129;
 set_real_ip_from 2a0f:e586:f:f:a052:2166:bef9:a432;
 set_real_ip_from 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 set_real_ip_from 2a0f:e586:f:f:baa4:d491:90be:dca5;
-set_real_ip_from 2a0f:e586:f:f:c94a:de42:aac1:9045;
 set_real_ip_from 2a10:1fc0:10::19eb:717b;
 set_real_ip_from 2a10:1fc0:10::28fc:90d4;
 set_real_ip_from 2a10:1fc0:10::2a17:5b54;
@@ -765,6 +764,7 @@ set_real_ip_from 2a10:1fc0:10::e4c8:9020;
 set_real_ip_from 2a10:1fc0:10::ea87:5496;
 set_real_ip_from 2a10:1fc0:10::fa6c:cac5;
 set_real_ip_from 2a10:1fc0:10::fdb0:ba7f;
+set_real_ip_from 2a10:1fc0:c:0:216:3cff:fe59:a64a;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a10:c800:1:f7f8:0:1ce:1ce:babe;
