--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -60,7 +60,6 @@ allow 107.189.14.106;
 allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.9;
-allow 107.189.2.108;
 allow 107.189.29.103;
 allow 107.189.29.184;
 allow 107.189.30.236;
@@ -108,7 +107,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
-allow 114.145.195.180;
 allow 114.35.245.150;
 allow 1.170.222.187;
 allow 118.163.74.160;
@@ -263,17 +261,7 @@ allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.120.16.171;
 allow 185.120.16.176;
-allow 185.129.61.1;
-allow 185.129.61.10;
 allow 185.129.61.129;
-allow 185.129.61.2;
-allow 185.129.61.3;
-allow 185.129.61.4;
-allow 185.129.61.5;
-allow 185.129.61.6;
-allow 185.129.61.7;
-allow 185.129.61.8;
-allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
@@ -496,7 +484,6 @@ allow 185.241.208.185;
 allow 185.241.208.202;
 allow 185.241.208.204;
 allow 185.241.208.206;
-allow 185.241.208.54;
 allow 185.241.208.71;
 allow 185.241.208.81;
 allow 185.241.208.92;
@@ -627,6 +614,7 @@ allow 193.218.118.112;
 allow 193.218.118.156;
 allow 193.218.118.160;
 allow 193.218.118.173;
+allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
 allow 193.218.118.89;
@@ -672,6 +660,7 @@ allow 198.251.88.18;
 allow 198.251.89.96;
 allow 198.46.129.170;
 allow 198.46.166.157;
+allow 198.50.212.160;
 allow 198.58.107.53;
 allow 198.96.155.3;
 allow 198.98.48.33;
@@ -778,16 +767,6 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:666::1;
-allow 2001:67c:89c:702:1ce:1ce:babe:1;
-allow 2001:67c:89c:702:1ce:1ce:babe:10;
-allow 2001:67c:89c:702:1ce:1ce:babe:2;
-allow 2001:67c:89c:702:1ce:1ce:babe:3;
-allow 2001:67c:89c:702:1ce:1ce:babe:4;
-allow 2001:67c:89c:702:1ce:1ce:babe:5;
-allow 2001:67c:89c:702:1ce:1ce:babe:6;
-allow 2001:67c:89c:702:1ce:1ce:babe:7;
-allow 2001:67c:89c:702:1ce:1ce:babe:8;
-allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::100;
 allow 2001:67c:e28:1::101;
 allow 2001:67c:e28:1::102;
@@ -1096,7 +1075,6 @@ allow 2605:6400:30:f805:1e96:b223:fbe5:cfac;
 allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
-allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
@@ -1241,6 +1219,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1603,6 +1582,7 @@ allow 2a0f:e586:f:f:23ae:4067:bed4:a129;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
+allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:1fc0:10::19eb:717b;
 allow 2a10:1fc0:10::28fc:90d4;
 allow 2a10:1fc0:10::2a17:5b54;
@@ -1690,16 +1670,12 @@ allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:133;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
-allow 2a12:a800:2:1:45:141:215:17;
-allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:21;
 allow 2a12:a800:2:1:45:141:215:28;
-allow 2a12:a800:2:1:45:141:215:40;
 allow 2a12:a800:2:1:45:141:215:56;
 allow 2a12:a800:2:1:45:141:215:61;
 allow 2a12:a800:2:1:45:141:215:62;
 allow 2a12:a800:2:1:45:141:215:63;
-allow 2a12:a800:2:1:45:141:215:80;
 allow 2a12:a800:2:1:45:141:215:88;
 allow 2a12:a800:2:1:45:141:215:90;
 allow 2a12:a800:2:1:45:141:215:95;
@@ -1762,16 +1738,12 @@ allow 45.141.215.114;
 allow 45.141.215.133;
 allow 45.141.215.167;
 allow 45.141.215.169;
-allow 45.141.215.17;
-allow 45.141.215.19;
 allow 45.141.215.21;
 allow 45.141.215.28;
-allow 45.141.215.40;
 allow 45.141.215.56;
 allow 45.141.215.61;
 allow 45.141.215.62;
 allow 45.141.215.63;
-allow 45.141.215.80;
 allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
@@ -1904,6 +1876,7 @@ allow 5.45.104.176;
 allow 5.45.98.162;
 allow 57.128.220.107;
 allow 5.79.66.19;
+allow 61.207.103.233;
 allow 62.133.45.2;
 allow 62.133.63.146;
 allow 62.182.84.146;
@@ -1945,6 +1918,7 @@ allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.86;
 allow 82.221.139.190;
+allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1990,6 +1964,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -2072,6 +2047,5 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
-allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
