--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -152,6 +152,7 @@ allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
 allow 154.41.95.1;
+allow 154.83.88.219;
 allow 158.69.252.116;
 allow 160.119.249.240;
 allow 161.129.68.162;
@@ -925,6 +926,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1217,6 +1219,7 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1560,6 +1563,8 @@ allow 2a0e:bfc2:0:24::3456;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7:0:4::6e7a;
 allow 2a0e:e701:1198::1;
+allow 2a0f:7803:fac2:ab6d::1;
+allow 2a0f:7803:fac5:cd0::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:424c::1;
 allow 2a0f:85c1:356:5bdd::beef;
@@ -1712,6 +1717,7 @@ allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.157.11.6;
+allow 45.192.243.213;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
@@ -1875,6 +1881,7 @@ allow 8.208.26.177;
 allow 8.209.106.19;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.131.86;
 allow 82.221.139.190;
 allow 82.68.49.227;
 allow 83.217.9.73;
