--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -152,6 +152,7 @@ deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
 deny 154.41.95.1;
+deny 154.83.88.219;
 deny 158.69.252.116;
 deny 160.119.249.240;
 deny 161.129.68.162;
@@ -925,6 +926,7 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
+deny 217.154.21.121;
 deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
@@ -1217,6 +1219,7 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1560,6 +1563,8 @@ deny 2a0e:bfc2:0:24::3456;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7:0:4::6e7a;
 deny 2a0e:e701:1198::1;
+deny 2a0f:7803:fac2:ab6d::1;
+deny 2a0f:7803:fac5:cd0::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:424c::1;
 deny 2a0f:85c1:356:5bdd::beef;
@@ -1712,6 +1717,7 @@ deny 45.145.93.133;
 deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.157.11.6;
+deny 45.192.243.213;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
@@ -1875,6 +1881,7 @@ deny 8.208.26.177;
 deny 8.209.106.19;
 deny 82.221.128.191;
 deny 82.221.131.5;
+deny 82.221.131.86;
 deny 82.221.139.190;
 deny 82.68.49.227;
 deny 83.217.9.73;
