Update lists at 20250504-0001

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -338,6 +338,7 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2479:0:6e00::1;
@@ -734,7 +735,6 @@ allow 2a12:a800:2:1:45:138:16:113;
 allow 2a12:a800:2:1:45:138:16:164;
 allow 2a12:a800:2:1:45:138:16:178;
 allow 2a12:a800:2:1:45:138:16:222;
-allow 2a12:a800:2:1:45:138:16:231;
 allow 2a12:a800:2:1:45:138:16:239;
 allow 2a12:a800:2:1:45:138:16:240;
 allow 2a12:a800:2:1:45:138:16:248;
