--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -108,9 +108,8 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
-allow 114.145.238.129;
 allow 114.35.245.150;
-allow 114.41.13.191;
+allow 114.41.30.160;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -1279,7 +1278,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1560,6 +1558,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
+allow 2a0e:bfc0:0:13::67bc;
 allow 2a0e:bfc0:0:14::24a8;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
@@ -1788,6 +1787,7 @@ allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
 allow 45.95.169.130;
+allow 45.95.169.14;
 allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
@@ -1808,7 +1808,6 @@ allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1911,7 +1910,6 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
-allow 89.222.102.137;
 allow 89.234.157.254;
 allow 89.32.41.150;
 allow 89.36.231.128;
