--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -108,9 +108,8 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
-deny 114.145.238.129;
 deny 114.35.245.150;
-deny 114.41.13.191;
+deny 114.41.30.160;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -1279,7 +1278,6 @@ deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1560,6 +1558,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
+deny 2a0e:bfc0:0:13::67bc;
 deny 2a0e:bfc0:0:14::24a8;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc0:0:8::a84e;
@@ -1788,6 +1787,7 @@ deny 45.94.31.68;
 deny 45.95.169.104;
 deny 45.95.169.109;
 deny 45.95.169.130;
+deny 45.95.169.14;
 deny 45.95.169.230;
 deny 45.95.169.255;
 deny 46.165.243.36;
@@ -1808,7 +1808,6 @@ deny 5.181.80.107;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.224;
-deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1911,7 +1910,6 @@ deny 89.147.110.118;
 deny 89.147.110.154;
 deny 89.147.110.82;
 deny 89.147.111.87;
-deny 89.222.102.137;
 deny 89.234.157.254;
 deny 89.32.41.150;
 deny 89.36.231.128;
