Update lists at 20250505-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -109,7 +109,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.240.90;
+allow 114.41.26.131;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -200,9 +200,10 @@ allow 172.81.132.94;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
+allow 173.44.141.34;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.58.100.98;
-allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
 allow 176.65.149.100;
@@ -212,8 +213,6 @@ allow 176.65.149.87;
 allow 176.65.149.88;
 allow 176.65.149.96;
 allow 176.97.114.202;
-allow 177.149.128.94;
-allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -228,7 +227,6 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
-allow 178.218.144.99;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -520,12 +518,10 @@ allow 185.40.4.38;
 allow 185.40.4.44;
 allow 185.40.4.64;
 allow 185.40.4.92;
-allow 185.42.12.136;
 allow 185.42.170.203;
 allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.82.219.109;
-allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -539,11 +535,6 @@ allow 190.211.254.97;
 allow 192.108.48.150;
 allow 192.124.180.154;
 allow 192.159.99.35;
-allow 192.210.160.31;
-allow 192.210.160.35;
-allow 192.210.214.10;
-allow 192.210.255.47;
-allow 192.3.241.151;
 allow 192.42.116.13;
 allow 192.42.116.14;
 allow 192.42.116.15;
@@ -628,7 +619,6 @@ allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
 allow 193.36.132.21;
-allow 193.56.135.103;
 allow 194.15.112.133;
 allow 194.15.113.118;
 allow 194.15.115.212;
@@ -660,7 +650,6 @@ allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
 allow 198.251.89.96;
-allow 198.46.129.170;
 allow 198.46.166.157;
 allow 198.50.212.160;
 allow 198.58.107.53;
@@ -1220,7 +1209,6 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2479:0:6e00::1;
@@ -1255,7 +1243,6 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1277,8 +1264,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1328,6 +1313,7 @@ allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1593,6 +1579,54 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a10:1fc0:10::19eb:717b;
+allow 2a10:1fc0:10::28fc:90d4;
+allow 2a10:1fc0:10::2a17:5b54;
+allow 2a10:1fc0:10::2cf4:6ba2;
+allow 2a10:1fc0:10::2d91:1a2d;
+allow 2a10:1fc0:10::3903:457;
+allow 2a10:1fc0:10::3919:de17;
+allow 2a10:1fc0:10::3a1:5e9f;
+allow 2a10:1fc0:10::3dc5:e694;
+allow 2a10:1fc0:10::3eb3:d1d0;
+allow 2a10:1fc0:10::3ec1:2b1e;
+allow 2a10:1fc0:10::40d8:83c;
+allow 2a10:1fc0:10::42d2:f78b;
+allow 2a10:1fc0:10::5138:4dfa;
+allow 2a10:1fc0:10::5719:261d;
+allow 2a10:1fc0:10::61d9:7617;
+allow 2a10:1fc0:10::61e2:c84d;
+allow 2a10:1fc0:10::627f:3c31;
+allow 2a10:1fc0:10::694a:c359;
+allow 2a10:1fc0:10::6b4c:30fc;
+allow 2a10:1fc0:10::6c2e:469a;
+allow 2a10:1fc0:10::6d92:d6ab;
+allow 2a10:1fc0:10::6fde:4b8d;
+allow 2a10:1fc0:10::792f:38b4;
+allow 2a10:1fc0:10::895d:abf9;
+allow 2a10:1fc0:10::8a03:d023;
+allow 2a10:1fc0:10::8b78:d42e;
+allow 2a10:1fc0:10::8d4d:eca2;
+allow 2a10:1fc0:10::9a73:d4f2;
+allow 2a10:1fc0:10::9d80:c9f7;
+allow 2a10:1fc0:10::9e08:e765;
+allow 2a10:1fc0:10::a3a5:49da;
+allow 2a10:1fc0:10::a458:8b37;
+allow 2a10:1fc0:10::a63c:724c;
+allow 2a10:1fc0:10::b571:1205;
+allow 2a10:1fc0:10::bf3f:d195;
+allow 2a10:1fc0:10::c129:61a1;
+allow 2a10:1fc0:10::c385:c7fa;
+allow 2a10:1fc0:10::c7c7:2f84;
+allow 2a10:1fc0:10::d5a6:a292;
+allow 2a10:1fc0:10::d5d0:db30;
+allow 2a10:1fc0:10::d6b7:b3e9;
+allow 2a10:1fc0:10::dbe0:6173;
+allow 2a10:1fc0:10::dbe9:7852;
+allow 2a10:1fc0:10::e4c8:9020;
+allow 2a10:1fc0:10::ea87:5496;
+allow 2a10:1fc0:10::fa6c:cac5;
+allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
@@ -1736,7 +1770,6 @@ allow 45.66.35.32;
 allow 45.66.35.33;
 allow 45.66.35.34;
 allow 45.66.35.35;
-allow 45.76.89.254;
 allow 45.78.44.215;
 allow 45.79.144.222;
 allow 45.80.158.175;
@@ -1799,6 +1832,8 @@ allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
+allow 46.249.49.183;
+allow 46.30.188.218;
 allow 47.254.142.180;
 allow 47.89.193.230;
 allow 5.104.86.6;
@@ -1811,8 +1846,6 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.224;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1897,6 +1930,30 @@ allow 84.211.226.13;
 allow 84.235.236.189;
 allow 84.239.46.144;
 allow 85.239.41.130;
+allow 85.239.55.11;
+allow 85.239.55.110;
+allow 85.239.55.112;
+allow 85.239.55.114;
+allow 85.239.55.123;
+allow 85.239.55.132;
+allow 85.239.55.168;
+allow 85.239.55.173;
+allow 85.239.55.174;
+allow 85.239.55.184;
+allow 85.239.55.189;
+allow 85.239.55.192;
+allow 85.239.55.201;
+allow 85.239.55.228;
+allow 85.239.55.230;
+allow 85.239.55.239;
+allow 85.239.55.24;
+allow 85.239.55.249;
+allow 85.239.55.25;
+allow 85.239.55.250;
+allow 85.239.55.31;
+allow 85.239.55.37;
+allow 85.239.55.51;
+allow 85.239.55.80;
 allow 85.93.218.204;
 allow 86.54.28.49;
 allow 87.118.110.27;
@@ -1911,7 +1968,6 @@ allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.110.112.209;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1941,6 +1997,30 @@ allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.219.237.39;
 allow 91.227.114.153;
+allow 91.227.77.107;
+allow 91.227.77.108;
+allow 91.227.77.119;
+allow 91.227.77.125;
+allow 91.227.77.139;
+allow 91.227.77.158;
+allow 91.227.77.160;
+allow 91.227.77.181;
+allow 91.227.77.193;
+allow 91.227.77.200;
+allow 91.227.77.208;
+allow 91.227.77.209;
+allow 91.227.77.226;
+allow 91.227.77.229;
+allow 91.227.77.237;
+allow 91.227.77.25;
+allow 91.227.77.31;
+allow 91.227.77.36;
+allow 91.227.77.44;
+allow 91.227.77.48;
+allow 91.227.77.51;
+allow 91.227.77.54;
+allow 91.227.77.62;
+allow 91.227.77.97;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
