--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -339,7 +339,6 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2479:0:6e00::1;
@@ -374,7 +373,6 @@ allow 2a03:4000:6:614:d803:40ff:fec3:832a;
 allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
-allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -396,8 +394,6 @@ allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:82c0::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -447,6 +443,7 @@ allow 2a0b:64c0:f802:1::a;
 allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:7140:6:1:5054:ff:fed8:5956;
+allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -712,6 +709,54 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
+allow 2a10:1fc0:10::19eb:717b;
+allow 2a10:1fc0:10::28fc:90d4;
+allow 2a10:1fc0:10::2a17:5b54;
+allow 2a10:1fc0:10::2cf4:6ba2;
+allow 2a10:1fc0:10::2d91:1a2d;
+allow 2a10:1fc0:10::3903:457;
+allow 2a10:1fc0:10::3919:de17;
+allow 2a10:1fc0:10::3a1:5e9f;
+allow 2a10:1fc0:10::3dc5:e694;
+allow 2a10:1fc0:10::3eb3:d1d0;
+allow 2a10:1fc0:10::3ec1:2b1e;
+allow 2a10:1fc0:10::40d8:83c;
+allow 2a10:1fc0:10::42d2:f78b;
+allow 2a10:1fc0:10::5138:4dfa;
+allow 2a10:1fc0:10::5719:261d;
+allow 2a10:1fc0:10::61d9:7617;
+allow 2a10:1fc0:10::61e2:c84d;
+allow 2a10:1fc0:10::627f:3c31;
+allow 2a10:1fc0:10::694a:c359;
+allow 2a10:1fc0:10::6b4c:30fc;
+allow 2a10:1fc0:10::6c2e:469a;
+allow 2a10:1fc0:10::6d92:d6ab;
+allow 2a10:1fc0:10::6fde:4b8d;
+allow 2a10:1fc0:10::792f:38b4;
+allow 2a10:1fc0:10::895d:abf9;
+allow 2a10:1fc0:10::8a03:d023;
+allow 2a10:1fc0:10::8b78:d42e;
+allow 2a10:1fc0:10::8d4d:eca2;
+allow 2a10:1fc0:10::9a73:d4f2;
+allow 2a10:1fc0:10::9d80:c9f7;
+allow 2a10:1fc0:10::9e08:e765;
+allow 2a10:1fc0:10::a3a5:49da;
+allow 2a10:1fc0:10::a458:8b37;
+allow 2a10:1fc0:10::a63c:724c;
+allow 2a10:1fc0:10::b571:1205;
+allow 2a10:1fc0:10::bf3f:d195;
+allow 2a10:1fc0:10::c129:61a1;
+allow 2a10:1fc0:10::c385:c7fa;
+allow 2a10:1fc0:10::c7c7:2f84;
+allow 2a10:1fc0:10::d5a6:a292;
+allow 2a10:1fc0:10::d5d0:db30;
+allow 2a10:1fc0:10::d6b7:b3e9;
+allow 2a10:1fc0:10::dbe0:6173;
+allow 2a10:1fc0:10::dbe9:7852;
+allow 2a10:1fc0:10::e4c8:9020;
+allow 2a10:1fc0:10::ea87:5496;
+allow 2a10:1fc0:10::fa6c:cac5;
+allow 2a10:1fc0:10::fdb0:ba7f;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
