Update lists at 20250506-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,6 +1,7 @@
 allow 102.130.113.9;
 allow 102.130.117.167;
 allow 102.130.127.117;
+allow 102.211.56.105;
 allow 102.211.56.12;
 allow 102.211.56.13;
 allow 102.211.56.250;
@@ -108,7 +109,7 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.168.177.134;
+allow 1.170.196.25;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -142,6 +143,7 @@ allow 146.59.231.4;
 allow 147.45.116.145;
 allow 148.113.152.91;
 allow 149.202.79.129;
+allow 149.56.22.133;
 allow 149.56.44.47;
 allow 152.32.181.53;
 allow 152.32.199.79;
@@ -195,6 +197,7 @@ allow 172.81.131.111;
 allow 172.81.131.139;
 allow 172.81.131.156;
 allow 172.81.132.94;
+allow 172.81.135.157;
 allow 173.0.3.111;
 allow 173.237.206.68;
 allow 173.255.198.243;
@@ -261,7 +264,17 @@ allow 185.113.128.30;
 allow 185.113.8.186;
 allow 185.120.16.171;
 allow 185.120.16.176;
+allow 185.129.61.1;
+allow 185.129.61.10;
 allow 185.129.61.129;
+allow 185.129.61.2;
+allow 185.129.61.3;
+allow 185.129.61.4;
+allow 185.129.61.5;
+allow 185.129.61.6;
+allow 185.129.61.7;
+allow 185.129.61.8;
+allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
@@ -534,7 +547,6 @@ allow 190.120.229.98;
 allow 190.211.254.97;
 allow 192.108.48.150;
 allow 192.124.180.154;
-allow 192.159.99.35;
 allow 192.42.116.13;
 allow 192.42.116.14;
 allow 192.42.116.15;
@@ -745,6 +757,16 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:666::1;
+allow 2001:67c:89c:702:1ce:1ce:babe:1;
+allow 2001:67c:89c:702:1ce:1ce:babe:10;
+allow 2001:67c:89c:702:1ce:1ce:babe:2;
+allow 2001:67c:89c:702:1ce:1ce:babe:3;
+allow 2001:67c:89c:702:1ce:1ce:babe:4;
+allow 2001:67c:89c:702:1ce:1ce:babe:5;
+allow 2001:67c:89c:702:1ce:1ce:babe:6;
+allow 2001:67c:89c:702:1ce:1ce:babe:7;
+allow 2001:67c:89c:702:1ce:1ce:babe:8;
+allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::100;
 allow 2001:67c:e28:1::101;
 allow 2001:67c:e28:1::102;
@@ -1070,6 +1092,7 @@ allow 2607:5300:201:3100::35c5;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
+allow 2607:5300:61:785::;
 allow 2607:f530:8002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2620:7:6001::101;
@@ -1257,7 +1280,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1906,7 +1928,6 @@ allow 82.221.131.5;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
@@ -1956,6 +1977,7 @@ allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.82;
 allow 89.147.111.87;
+allow 89.222.102.137;
 allow 89.234.157.254;
 allow 89.32.41.150;
 allow 89.36.231.128;
@@ -2032,6 +2054,5 @@ allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.211.174.137;
-allow 95.211.244.28;
 allow 95.216.107.148;
 allow 98.128.173.33;
