--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -72,6 +72,16 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
 allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:666::1;
+allow 2001:67c:89c:702:1ce:1ce:babe:1;
+allow 2001:67c:89c:702:1ce:1ce:babe:10;
+allow 2001:67c:89c:702:1ce:1ce:babe:2;
+allow 2001:67c:89c:702:1ce:1ce:babe:3;
+allow 2001:67c:89c:702:1ce:1ce:babe:4;
+allow 2001:67c:89c:702:1ce:1ce:babe:5;
+allow 2001:67c:89c:702:1ce:1ce:babe:6;
+allow 2001:67c:89c:702:1ce:1ce:babe:7;
+allow 2001:67c:89c:702:1ce:1ce:babe:8;
+allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:67c:e28:1::100;
 allow 2001:67c:e28:1::101;
 allow 2001:67c:e28:1::102;
@@ -202,6 +212,7 @@ allow 2607:5300:201:3100::35c5;
 allow 2607:5300:203:b45b::;
 allow 2607:5300:205:200::4894;
 allow 2607:5300:60:566f::1;
+allow 2607:5300:61:785::;
 allow 2607:f530:8002::19;
 allow 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 allow 2620:7:6001::101;
@@ -388,7 +399,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
