--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -72,6 +72,16 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5527;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5528;
 set_real_ip_from 2001:67c:89c:666::1;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:1;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:10;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:2;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:3;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:4;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:5;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:6;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
+set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:67c:e28:1::100;
 set_real_ip_from 2001:67c:e28:1::101;
 set_real_ip_from 2001:67c:e28:1::102;
@@ -202,6 +212,7 @@ set_real_ip_from 2607:5300:201:3100::35c5;
 set_real_ip_from 2607:5300:203:b45b::;
 set_real_ip_from 2607:5300:205:200::4894;
 set_real_ip_from 2607:5300:60:566f::1;
+set_real_ip_from 2607:5300:61:785::;
 set_real_ip_from 2607:f530:8002::19;
 set_real_ip_from 2607:fa18:3:beef:f001:c0de:feed:ba5e;
 set_real_ip_from 2620:7:6001::101;
@@ -388,7 +399,6 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
