--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -109,7 +109,6 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 1.170.224.129;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
@@ -489,6 +488,7 @@ allow 185.227.134.106;
 allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.235.146.29;
+allow 185.238.121.58;
 allow 185.241.208.115;
 allow 185.241.208.185;
 allow 185.241.208.202;
@@ -937,7 +937,6 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
-allow 217.154.21.121;
 allow 217.199.199.250;
 allow 23.137.248.100;
 allow 23.137.248.192;
@@ -1228,7 +1227,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe52:c6f8;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2479:0:6e00::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1290,6 +1288,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
+allow 2a04:9b87:500::58;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
@@ -1326,8 +1325,6 @@ allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-allow 2a0b:64c0:f802:1::a;
-allow 2a0b:64c0:f802:4c::a;
 allow 2a0b:7140:1:1:5054:ff:fe12:2305;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1699,8 +1696,6 @@ allow 45.138.16.42;
 allow 45.138.16.69;
 allow 45.138.16.76;
 allow 45.138.87.142;
-allow 45.139.50.202;
-allow 45.139.50.204;
 allow 45.141.215.110;
 allow 45.141.215.111;
 allow 45.141.215.114;
@@ -1910,6 +1905,7 @@ allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
 allow 89.110.112.209;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
