--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -109,7 +109,6 @@ deny 109.70.100.70;
 deny 109.70.100.71;
 deny 113.20.31.38;
 deny 114.35.245.150;
-deny 1.170.224.129;
 deny 118.163.74.160;
 deny 118.193.64.139;
 deny 118.194.231.50;
@@ -489,6 +488,7 @@ deny 185.227.134.106;
 deny 185.231.102.51;
 deny 185.233.100.23;
 deny 185.235.146.29;
+deny 185.238.121.58;
 deny 185.241.208.115;
 deny 185.241.208.185;
 deny 185.241.208.202;
@@ -937,7 +937,6 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
-deny 217.154.21.121;
 deny 217.199.199.250;
 deny 23.137.248.100;
 deny 23.137.248.192;
@@ -1228,7 +1227,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe52:c6f8;
 deny 2a02:16d0:0:5::1;
-deny 2a02:2479:0:6e00::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1290,6 +1288,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9b87:500::58;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
@@ -1326,8 +1325,6 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
-deny 2a0b:64c0:f802:1::a;
-deny 2a0b:64c0:f802:4c::a;
 deny 2a0b:7140:1:1:5054:ff:fe12:2305;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
@@ -1699,8 +1696,6 @@ deny 45.138.16.42;
 deny 45.138.16.69;
 deny 45.138.16.76;
 deny 45.138.87.142;
-deny 45.139.50.202;
-deny 45.139.50.204;
 deny 45.141.215.110;
 deny 45.141.215.111;
 deny 45.141.215.114;
@@ -1910,6 +1905,7 @@ deny 88.80.26.2;
 deny 88.80.26.3;
 deny 88.80.26.4;
 deny 89.110.112.209;
+deny 89.110.95.200;
 deny 89.147.108.90;
 deny 89.147.110.118;
 deny 89.147.110.154;
